src/test/ui/rfc-2632-const-trait-impl/issue-88155.stderr
error[E0277]: the trait bound `T: ~const A` is not satisfied
  --> $DIR/issue-88155.rs:9:5
   |
LL |     T::assoc()
   |     ^^^^^^^^^^ the trait `~const A` is not implemented for `T`
   |
note: the trait `A` is implemented for `T`, but that implementation is not `const`
  --> $DIR/issue-88155.rs:9:5
   |
LL |     T::assoc()
   |     ^^^^^^^^^^

error[E0015]: cannot call non-const fn `<T as A>::assoc` in constant functions
  --> $DIR/issue-88155.rs:9:5
   |
LL |     T::assoc()
   |     ^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
